Navbar and router added

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 body {
   background-image: url('https://99percentinvisible.org/app/uploads/2019/07/solo-jaz.jpg');
